# pipelint

./: .coverage  .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PRODUCT_SPEC.md  README.md  TECH_SPEC.md  commit.txt  pyproject.toml  testDemo.md
src/pipelineiq/: __init__.py  __main__.py
src/pipelineiq/ai/: __init__.py  claude.py
src/pipelineiq/analyzers/: __init__.py  base.py
src/pipelineiq/analyzers/rules/: __init__.py  best_practices.py  caching.py  parallelization.py  redundancy.py  resource.py  security.py
src/pipelineiq/cli/: __init__.py  main.py
src/pipelineiq/core/: __init__.py  dag.py  engine.py
src/pipelineiq/models/: __init__.py  finding.py  pipeline.py  result.py
src/pipelineiq/parsers/: __init__.py  base.py  github.py  harness.py
src/pipelineiq/reporters/: __init__.py  json_reporter.py  markdown.py  terminal.py
tests/: __init__.py  test_ai.py  test_analyzers.py  test_dag.py  test_integration.py  test_models.py  test_parsers.py  test_version.py
tests/fixtures/github/: complex.yaml  simple.yaml
tests/fixtures/harness/: complex.yaml  simple.yaml
